--- a/views/searches.html
+++ b/views/searches.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB" manifest="offline.appcache">
+<html lang="en-GB" manifest="offline.appcache" type="text/cache-manifest">
 <head>
     <script>
         //if user is not logged in, returns to login page
@@ -7,15 +7,16 @@
             window.location.replace("/");
     </script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <title></title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Searches</title>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 
     <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
-    <link href="stylesheets/style.css" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/mediaqueries.css" rel="stylesheet" type="text/css"/>
+    <link href="../public/stylesheets/style.css" rel="stylesheet" type="text/css"/>
+    <link href="../public/stylesheets/mediaqueries.css" rel="stylesheet" type="text/css"/>
     <!--[if gte IE 9]>
     <style type="text/css">
         .gradient {
@@ -26,8 +27,8 @@
 </head>
 <body>
 <header id="searchesHeader" class="header">
-    <h1>Hello, <span id="username"></span>!</h1>
-    <h2>Click <a href="/view">here</a> to go back to map view or <a href="/logout">here</a> to log out.</h2>
+    <h1>Hello, <span id="username"></span>!&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<span class="smaller"><a href="/logout" id="logoutButton"><img src="../public/images/logout.png"/> log out.</a></span></h1>
+    <h2 id="online">Click <a href="/view">here</a> to go back to map view</h2>
 </header>
 <section id="searchesSection">
     <div id="searches">
@@ -36,78 +37,6 @@
 </section>
 <footer id="searchesFooter" class="footer"><span class="credits">COMM049 Coursework - Class of 2014 - Larissa Barra Conde</span></footer>
 
-<script>
-
-    function deleteThisSearch(passedKey) {
-        Object.keys(localStorage).forEach(function(key) {
-            var regex = new RegExp("(" + passedKey.replace(/\//g, "\\/").replace(/\-/g, "\\-") + ")", "g");
-            if (regex.test(key)) {
-                localStorage.removeItem(key);
-            }
-        });
-        window.location.reload();
-    }
-
-    $(function() {
-        //session
-        $("#username").html(sessionStorage.getItem("username"));
-
-        //the searches
-        var username = sessionStorage.getItem("username");
-        var password = sessionStorage.getItem("password");
-        var html = "";
-
-        var temporaryArray = new Array();
-
-        for(i = 0; i < localStorage.length; i++) {
-            var savedSearch = JSON.parse(localStorage.getItem(localStorage.key(i)));
-            for(k = 0; k < savedSearch.length; k++) {
-                var key = savedSearch[k].key.split("-");
-                var entireKey = savedSearch[k].key;
-                var key2 = savedSearch[k].key.split("-");
-                key2.reverse().shift();
-                var deleteKey = key2.reverse().join("-").trim();
-
-                if (key[0] == username && key[1] == password) {
-                    if (key[4] == 0) {
-                        //creating new header
-                        html += "<div><h3><span class='titleSearch'>On <strong>" + key[2] + "</strong> you saved <strong>" + key[3] + "</strong> close to "
-                                + savedSearch[k].value
-                                + "</span><input type='button' value='×' class='deleteSearch' id='" + deleteKey + "'/>"
-                                + "<div class='clear'></div></h3>"
-                                + "<div><strong>The closest are:</strong>";
-                    } else {
-                        //storing values to be sorted
-                        html += "<br/><span>" + Number(key[4]) + " - " + savedSearch[k].value + "</span>";
-                    }
-                }
-                console.log(html);
-            }
-            html += "</div>";
-        }
-
-        html += "</div>";
-
-        $("#searches").html(html);
-
-        //sorting by most recent
-        $("#searches h3").each(function() {
-            $(this).closest('div').prependTo('#searches');
-        });
-
-        //the accordion effect
-        $("#searches").accordion({
-            header: "> div > h3",
-            heightStyle: "content",
-            collapsible: true,
-            heightStyle: "fill",
-            active: false
-        });
-
-        $('.deleteSearch').click(function () {
-            deleteThisSearch($(this).attr('id'));
-        });
-    });
-</script>
+<script src="../public/javascripts/searches.js" type="text/javascript"></script>
 </body>
 </html>
