--- a/views/logout.html
+++ b/views/logout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB" manifest="offline.appcache" type="text/cache-manifest">
+<html lang="en-GB" manifest="offline.appcache">
 <head>
     <script>
         sessionStorage.clear();
@@ -7,8 +7,6 @@
     </script>
     <meta charset="UTF-8">
     <meta name="description" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Logging out</title>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
