--- a/views/offline.html
+++ b/views/offline.html
@@ -2,19 +2,17 @@
 <html lang="en-GB" manifest="offline.appcache" type="text/cache-manifest">
 <head>
     <script>
-        sessionStorage.clear();
-        window.location.replace("/");
+        //if user is not logged in, returns to login page
+        if (sessionStorage.length == 0)
+            window.location.replace("/");
     </script>
     <meta charset="UTF-8">
-    <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Logging out</title>
+    <title>Offline mode</title>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-    <link href="stylesheets/style.css" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/mediaqueries.css" rel="stylesheet" type="text/css"/>
+    <link href="../public/stylesheets/style.css" rel="stylesheet" type="text/css"/>
+    <link href="../public/stylesheets/mediaqueries.css" rel="stylesheet" type="text/css"/>
     <!--[if gte IE 9]>
     <style type="text/css">
         .gradient {
@@ -24,9 +22,11 @@
     <![endif]-->
 </head>
 <body>
-<header id="logoutHeader" class="header"></header>
-
-<footer id="logoutFooter" class="footer">
+<header id="mainHeader" class="header">
+    <h1>Hello, <span id="username"></span>!</h1>
+</header>
+<h1>Ops! You're offline, try to connect again!</h1>
+<footer id="mainFooter" class="footer">
     <span class="credits">COMM049 Coursework - Class of 2014 - Larissa Barra Conde</span>
 </footer>
 </body>
